blog-listing/image-product/@username/review

--- a/WebApplication/Views/Home/About.cshtml
+++ b/WebApplication/Views/Home/About.cshtml
@@ -33,8 +33,12 @@
                         <h2 class="h-47 bold light-black mb-16">
                             Welcome to Toy Store
                         </h2>
-                        <p class="light-black mb-24"> Lorem ipsum dolor sit amet consectetur. Sodales diam suspendisse auctor ut at elit pharetra. Consequat sagittis volutpat enim dolor blandit venenatis. Nam adipiscing hac sapien nisi urna eget pretium mattis. Egestas leo rhoncus fusce rhoncus a dis nam mi ac. Sollicitudin euismod in nullam purus. </p>
-                        <p class="light-black mb-48">Integer pharetra massa in egestas vitae luctus mi vulputate odio. Sit molestie turpis proin vel sit lectus sed adipiscing bibendum. Id arcu convallis dictumst in. Massa semper nascetur nullam et non purus viverra massa orci. Quis lacus donec.</p>
+                        <p class="light-black mb-24"> Welcome to Toy Store, your one-stop destination for bringing smiles to children's faces! At Toy Store, we believe in the magic of play and the importance of toys in a child's development. Our mission is to provide a wide range of high-quality, safe, and eco-friendly toys that inspire creativity, learning, and fun.</p>
+                        <p class="light-black mb-48">
+                            At Toy Store, we understand the joy and excitement that toys bring to children and parents alike. Our store is filled with a carefully curated selection of toys that cater to all ages and interests. From educational toys that promote learning to fun games that spark imagination, we have something for every child.
+
+                            We are dedicated to providing exceptional customer service and a delightful shopping experience. Our knowledgeable staff is always ready to assist you in finding the perfect toy for your child. Thank you for choosing Toy Store, where every toy is a gateway to happiness and creativity.
+                        </p>
                         <h4 class="h-47 bold light-black mb-16">
                             Our Philosophy
                         </h4>
@@ -90,53 +94,53 @@
         </div>
     </div>
     <!-- services Start -->
-    <!-- reviews Area Start -->
-    <section class="review p-96">
-        <div class="container">
-            <div class="heading mb-48 text-center">
-                <h2>User’s Reviews</h2>
+   <!-- reviews Area Start -->
+<section class="review ">
+    <div class="container">
+        <div class="heading mb-48 text-center">
+            <h2>User’s Reviews</h2>
+        </div>
+        <div class="review-slider">
+            <div class="reviews">
+                <h5 class="color-black h-21 bold mb-16">Sarah Miller</h5>
+                <p class="light-black mb-16">As a parent, it's such a delight to see my children's faces light up when they receive toys from this store.</p>
+                <div class="text-end">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
+                        <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
+                    </svg>
+                </div>
             </div>
-            <div class="review-slider">
-                <div class="reviews">
-                    <h5 class="color-black h-21 bold mb-16">Sarah Miller</h5>
-                    <p class="light-black mb-16">As a parent, it's such a delight to see my children's faces light up when they receive toys from this store.</p>
-                    <div class="text-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
-                            <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
-                        </svg>
-                    </div>
+            <div class="reviews">
+                <h5 class="color-black h-21 bold mb-16">John Doe</h5>
+                <p class="light-black mb-16">As a father, I can confidently say that this toy store is a treasure trove of joy for my kids. The quality and variety of toys available here never fail to amaze me. Every visit is a new adventure!</p>
+                <div class="text-end">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
+                        <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
+                    </svg>
                 </div>
-                <div class="reviews">
-                    <h5 class="color-black h-21 bold mb-16">Lola Sayo</h5>
-                    <p class="light-black mb-16">As a parent, it's such a delight to see my children's faces light up when they receive toys from this store.</p>
-                    <div class="text-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
-                            <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
-                        </svg>
-                    </div>
+            </div>
+            <div class="reviews">
+                <h5 class="color-black h-21 bold mb-16">Michael Brown</h5>
+                <p class="light-black mb-16">I was impressed by the educational toys selection at this store. As a teacher, I value toys that can both entertain and educate, and this place has plenty of those. Highly recommended for parents and educators alike!</p>
+                <div class="text-end">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
+                        <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
+                    </svg>
                 </div>
-                <div class="reviews">
-                    <h5 class="color-black h-21 bold mb-16">Maya Mishra</h5>
-                    <p class="light-black mb-16">As a parent, it's such a delight to see my children's faces light up when they receive toys from this store.</p>
-                    <div class="text-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
-                            <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
-                        </svg>
-                    </div>
-                </div>
-                <div class="reviews">
-                    <h5 class="color-black h-21 bold mb-16">Sarah Miller</h5>
-                    <p class="light-black mb-16">As a parent, it's such a delight to see my children's faces light up when they receive toys from this store.</p>
-                    <div class="text-end">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
-                            <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
-                        </svg>
-                    </div>
+            </div>
+            <div class="reviews">
+                <h5 class="color-black h-21 bold mb-16">Olivia Greenr</h5>
+                <p class="light-black mb-16">Shopping at this toy store is always a delightful experience. The atmosphere is welcoming, and the toys are of exceptional quality. My kids always leave with big smiles and new favorite toys. Thank you for making playtime so special!</p>
+                <div class="text-end">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="57" height="45" viewBox="0 0 57 45" fill="none">
+                        <path d="M23.5993 6.85329V27.2648C23.5993 31.2509 22.8433 34.5498 21.3313 37.1614C18.4448 42.3845 13.3591 44.9961 6.07421 44.9961H4.21861L1.95066 44.5837V37.3675H2.36301C6.89892 37.3675 9.16687 35.0309 9.16687 30.3575V24.7907H6.48656C2.77537 24.7907 0.919769 22.8664 0.919769 19.0178V6.85329C0.919769 2.72974 2.77537 0.667969 6.48656 0.667969H18.0325C21.7437 0.667969 23.5993 2.72974 23.5993 6.85329ZM38.6502 44.9961C37.8255 44.9961 36.7946 44.8586 35.5576 44.5837V37.3675H35.9699C40.3684 37.3675 42.5676 35.0309 42.5676 30.3575V24.7907H40.0935C36.2448 24.7907 34.3205 22.8664 34.3205 19.0178V6.85329C34.3205 2.72974 36.2448 0.667969 40.0935 0.667969H51.6394C55.2131 0.667969 57 2.72974 57 6.85329V27.2648C57 39.0857 50.8834 44.9961 38.6502 44.9961Z" fill="#FBC270" />
+                    </svg>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- reviews Area End -->
+    </div>
+</section>
+<!-- reviews Area End -->
     <!-- Comming Soon Area Start -->
     <section class="comming-soon">
         <div class="container">
