--- a/WebApplication/Views/Shared/LayoutAdmin.cshtml
+++ b/WebApplication/Views/Shared/LayoutAdmin.cshtml
@@ -138,7 +138,7 @@
         </div>
         @Html.ActionLink("Dashboard", "AdminAccount", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("Manage users", "ManageUsers", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
-        @Html.ActionLink("Manage products", "Manageproducts", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
+        @Html.ActionLink("Manage products", "ManageProduct", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("Manage reviews", "ManageReview", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("Manage Content", "ManageContent", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("View orders", "ViewOrders", "Admin", new { @class = "btn btn-link text-white d-block text-left" })
