--- a/WebApplication/Views/Shared/ULayout.cshtml
+++ b/WebApplication/Views/Shared/ULayout.cshtml
@@ -88,7 +88,7 @@
                                 <a href="javascript:void(0);">Pages</a>
                                 <ul class="submenu">
                                     <li>@Html.ActionLink("Blog", "Blog", "HomeUser", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Blog-detail", "BlogDetail", "HomeUser", new { @class = "menu-link" })</li>
+                                    @*<li>@Html.ActionLink("Blog-detail", "BlogDetail", "HomeUser", new { @class = "menu-link" })</li>*@
                                     <li>@Html.ActionLink("Product-detail", "ProductDetail", "HomeUser", new { @class = "menu-link" })</li>
                                     @*<li>@Html.ActionLink("Cart", "Cart", "HomeUser", new { @class = "menu-link" })</li>*@
                                     <li>@Html.ActionLink("Checkout", "Checkout", "HomeUser", new { @class = "menu-link" })</li>
