--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                                 <a href="javascript:void(0);">Pages</a>
                                 <ul class="submenu">
                                     <li>@Html.ActionLink("Blog", "Blog", "Home", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Blog-detail", "BlogDetail", "Home", new { @class = "menu-link" })</li>
+                                    @*<li>@Html.ActionLink("Blog-detail", "BlogDetail", "Home", new { @class = "menu-link" })</li>*@
                                     <li>@Html.ActionLink("Product-detail", "ProductDetail", "Home", new { @class = "menu-link" })</li>
                                     <li>@Html.ActionLink("Cart", "Cart", "Home", new { @class = "menu-link" })</li>
                                     <li>@Html.ActionLink("Checkout", "Checkout", "", new { @class = "menu-link" })</li>
