--- a/WebApplication/Views/Admin/CreateProduct.cshtml
+++ b/WebApplication/Views/Admin/CreateProduct.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿@*@{
     ViewBag.Title = "Create Product"; // Убедитесь, что Title установлен
     Layout = "~/Views/Shared/LayoutAdmin.cshtml";
 }
@@ -75,4 +75,4 @@
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 @Html.Raw("<script src=\"https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js\"></script>")
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>*@
