--- a/WebApplication/Views/Shared/ALayout.cshtml
+++ b/WebApplication/Views/Shared/ALayout.cshtml
@@ -88,7 +88,7 @@
                                 <a href="javascript:void(0);">Pages</a>
                                 <ul class="submenu">
                                     <li>@Html.ActionLink("Blog", "Blog", "HomeAdmin", new { @class = "menu-link" })</li>
-                                    <li>@Html.ActionLink("Blog-detail", "BlogDetail", "HomeAdmin", new { @class = "menu-link" })</li>
+                                    @*<li>@Html.ActionLink("Blog-detail", "BlogDetail", "HomeAdmin", new { @class = "menu-link" })</li>*@
                                     <li>@Html.ActionLink("Product-detail", "ProductDetail", "HomeAdmin", new { @class = "menu-link" })</li>
                                     
                                    
