--- a/WebApplication/Views/Shared/LayoutUsers.cshtml
+++ b/WebApplication/Views/Shared/LayoutUsers.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -133,9 +134,7 @@
 </head>
 <body>
     <div class="sidebar">
-        <div class="logo">
-            <h3>Hi, @User.Identity.Name</h3>
-        </div>
+       
         @Html.ActionLink("Dashboard", "UserAccount", "User", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("Edit Info", "EditInfo", "User", new { @class = "btn btn-link text-white d-block text-left" })
         @Html.ActionLink("View Orders", "ViewOrdersU", "User", new { @class = "btn btn-link text-white d-block text-left" })
@@ -150,11 +149,11 @@
         <div class="container-fluid">
             @RenderBody()
         </div>
-   
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
 
